--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/logomicro.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="ERP Empresarial" />
-  <title>Administracion Misionary - Gestión Empresarial</title>
+  <meta name="description" content="Hacemos realidad tu visión digital" />
+  <title>Misionary - Gestión Empresarial</title>
 </head>
 
 <body>
